bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: type mismatch;
 found   : Unit
 required: Boolean
if (Message = "R") {droite(); avance();}
            ^BDR:3: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "L") {gauche(); avance();}
                 ^BDR:4: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "I") {droite();droite(); avance();}
                 ^BDR:5: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "A") {avance();}
                 ^BDR:6: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "B") {avance(); avance();}
                 ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "C") {avance();avance(); avance();}
                 ^BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "Z") {recule();}
                 ^BDR:9: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "Y") {recule();recule();}
                 ^BDR:10: error: type mismatch;
 found   : Unit
 required: Boolean
else if (Message = "X") {recule();recule();recule();}
                 ^