bdr.BDR.scala.code
var Message = litMessage()
if (Message = "R") {droite(); avance();}
else if (Message = "L") {gauche(); avance();}
else if (Message = "I") {droite();droite(); avance();}
else if (Message = "A") {avance();}
else if (Message = "B") {avance(); avance();}
else if (Message = "C") {avance();avance(); avance();}
else if (Message = "Z") {recule();}
else if (Message = "Y") {recule();recule();}
else if (Message = "X") {recule();recule();recule();}
